fixed tests for patient